css/src/components/checkbox.module.css
.Checkbox {
  display: flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: initial;
  box-sizing: border-box;
  padding-top: var(--spacing-05);
  padding-bottom: var(--spacing-05);
}

.Checkbox-input {
  position: absolute;
  z-index: 2;
  opacity: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
  margin: 0;
}

.Checkbox-labelWrapper {
  display: flex;
  flex-direction: column;
  min-width: 0;
}

.Checkbox-label {
  display: flex;
  cursor: pointer;
}

.Checkbox-label--tiny {
  font-weight: var(--font-weight-bold);
}

.Checkbox-outerWrapper {
  position: relative;
  margin-top: var(--spacing-05);
  margin-right: var(--spacing-20);
}

.Checkbox-outerWrapper--regular {
  height: var(--spacing-40);
  min-width: var(--spacing-40);
}

.Checkbox-outerWrapper--tiny {
  height: var(--spacing-30);
  min-width: var(--spacing-30);
}

/* Type: Unchecked  */

.Checkbox-wrapper {
  top: 0;
  left: 0;
  border-radius: var(--border-radius-05);
  display: flex;
  align-items: center;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  justify-content: center;
  transition: var(--duration--fast-01) var(--standard-productive-curve);
}

.Checkbox-input:focus {
  outline: 0;
}

.Checkbox-input:focus ~ .Checkbox-wrapper {
  outline: var(--border-width-05) solid var(--primary-focus);
  outline-offset: var(--spacing-05);
}

.Checkbox-input ~ .Checkbox-wrapper--default {
  border: var(--border-width-2-5) solid var(--inverse-lighter);
  background-color: var(--shadow-0);
}

.Checkbox-input:hover ~ .Checkbox-wrapper--default {
  border: var(--border-width-2-5) solid var(--inverse-light);
  background-color: var(--secondary-lighter);
}

.Checkbox-input:active ~ .Checkbox-wrapper--default {
  border: var(--border-width-2-5) solid var(--inverse-light);
  background-color: var(--secondary-light);
}

.Checkbox--disabled {
  pointer-events: none;
}

.Checkbox--disabled .Checkbox-wrapper--default {
  border: var(--border-width-2-5) solid var(--secondary);
  background-color: var(--secondary-lightest);
}

/* Type: checked && Type: indeterminate  */

.Checkbox-input--checked ~ .Checkbox-wrapper,
.Checkbox-input--indeterminate ~ .Checkbox-wrapper {
  background-color: var(--primary);
  border: 0;
}

.Checkbox-input--checked:focus ~ .Checkbox-wrapper,
.Checkbox-input--indeterminate:focus ~ .Checkbox-wrapper {
  background-color: var(--primary);
  border: 0;
}

.Checkbox-input--checked:hover ~ .Checkbox-wrapper,
.Checkbox-input--indeterminate:hover ~ .Checkbox-wrapper {
  background-color: var(--primary-dark);
  border: 0;
}

.Checkbox-input--checked:active ~ .Checkbox-wrapper,
.Checkbox-input--indeterminate:active ~ .Checkbox-wrapper {
  background-color: var(--primary-darker);
  border: 0;
}

.Checkbox--disabled .Checkbox-input--checked ~ .Checkbox-wrapper,
.Checkbox--disabled .Checkbox-input--indeterminate ~ .Checkbox-wrapper {
  background-color: var(--primary-lighter);
  border: 0;
}

/* Error State -> Default */

.Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert);
}

.Checkbox-input:hover ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert-dark);
}

.Checkbox-input:active ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert-darker);
  background-color: var(--secondary-light);
}

.Checkbox--disabled .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert-lighter);
  background-color: var(--secondary-lightest);
}

/* Error State -> Checked & Indeterminate */

.Checkbox-input--checked ~ .Checkbox-wrapper--error,
.Checkbox-input--indeterminate ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert);
}

.Checkbox-input--checked:focus ~ .Checkbox-wrapper--error,
.Checkbox-input--indeterminate:focus ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert);
}

.Checkbox-input--checked:hover ~ .Checkbox-wrapper--error,
.Checkbox-input--indeterminate:hover ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert-dark);
}

.Checkbox-input--checked:active ~ .Checkbox-wrapper--error,
.Checkbox-input--indeterminate:active ~ .Checkbox-wrapper--error {
  background-color: var(--primary-darker);
  border: var(--border-width-2-5) solid var(--alert-darker);
}

.Checkbox--disabled .Checkbox-input--checked ~ .Checkbox-wrapper--error,
.Checkbox--disabled .Checkbox-input--indeterminate ~ .Checkbox-wrapper--error {
  border: var(--border-width-2-5) solid var(--alert-lighter);
}

